<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter Focused" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Search..."
        android:inputType="text" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/sortByLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sort by:"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sortByFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name" />

            <RadioButton
                android:id="@+id/sortByLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name" />

            <RadioButton
                android:id="@+id/sortByAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address" />
        </RadioGroup>
    </LinearLayout>

    <ListView
        android:id="@+id/user_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp" />

    <Button
        android:id="@+id/button_create_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Profile"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
